# cambio

./: .anjuta_sym_db.db  Makefile  Makefile.in  README  aclocal.m4  cambio_2018.1_amd64.deb  config.h  config.status  configure  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cambio_2018.1_amd64/DEBIAN/: control  postinst  prerm
cambio_2018.1_amd64/usr/local/cambio/src/: cambio  cambio.c  cambio.ui~  cambio.vala
cambio_2018.1_amd64/usr/local/cambio/src/.deps/: cambio.Po
cambio_2018.1_amd64/usr/local/cambio/ui/: cambio.ui
cambio_2018.1_amd64/usr/local/share/applications/: cambio.desktop
cambio_2018.1_amd64/usr/share/applications/: cambio.desktop
src/: Makefile  Makefile.am  Makefile.in  about.ui  cambio  cambio.c  cambio.ui  cambio.vala  cambio.vala~
src/.deps/: cambio.Po
